# video-screen-split

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.claude/: settings.local.json
controller-ui/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
controller-ui/src/: App.tsx  styles.css  useWall.ts
coordinator/: Cargo.toml  build.rs
coordinator/src/: main.rs  mdns.rs  protocol.rs  state.rs  static_ui.rs  ws.rs
display-app/: electron-builder.json  package.json  tsconfig.json
display-app/scripts/: vmp-sign.cjs
display-app/src/main/: config.ts  discovery.ts  displays.ts  host.ts  index.ts  setup-prompt.ts  sync.ts
display-app/src/preload/: index.ts
