[package]
name = "coordinator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "10", features = ["serde-compat"] }
mdns-sd = "0.13"
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
hostname = "0.4"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
if-addrs = "0.13"

[build-dependencies]
anyhow = "1"
